[package]
name = "collected"
version = "0.1.0"
description = "Summation, product, maximum and more special collectors for Rust iterators."
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"
categories = ["rust-patterns"]
documentation = "https://docs.rs/collected/"
repository = "https://github.com/jerry73204/rust-collected.git"
homepage = "https://github.com/jerry73204/rust-collected"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.0"
